--- a/config/redmine.yml
+++ b/config/redmine.yml
@@ -35,3 +35,10 @@ tar_config:
  tracker_id: "4"
  description: ""
  content_type: "text/plain"
+
+txt_config: 
+ subject: "内閣官房長"
+ project_id: "I04202000000000000001"
+ tracker_id: "4"
+ description: ""
+ content_type: "text/plain"
