--- a/config/log4r.yml
+++ b/config/log4r.yml
@@ -14,7 +14,7 @@ log4r_config:
      - "F1"
   - name: "Parser"
     type: "Logger"
-    level: "INFO"
+    level: "DEBUG"
     trace: "true"
     outputters:
      - "StdOut"
