コメント整理

--- a/config/jma_xml_parse_rule.yml
+++ b/config/jma_xml_parse_rule.yml
@@ -8,7 +8,7 @@ xml_body: "/Report/Body"
 
 
 # ------------------------------------------------------------
-# Issuesテーブルの拡張フィールド用定義(JMA,J-Alertの気象情報XML用)
+# Issuesテーブルの拡張フィールド用定義
 # key:カラム名 value:XML内から要素取得のためのXpath
 # ------------------------------------------------------------
 issue_extras: 
@@ -52,8 +52,7 @@ issue_extras:
 # ------------------------------------------------------------
 # issue_geographyiesテーブルに保存する位置系データ取得用定義
 # coordinate,line,polygon,Locationの種類毎にXpathを複数定義しリストで保持
-# remarks_pathはpathからの相対パスで定義する
-# また、複数の文字列を連結する可能性があるため複数のパスをリストで保持
+# remarks_pathはpathからの相対パスで定義し、複数の文字列を連結する可能性があるため複数のパスをリストで保持
 # ------------------------------------------------------------
 issue_geographies: 
  "coordinate": 
@@ -198,7 +197,7 @@ trackers:
    default: "78"
 
 # ------------------------------------------------------------
-# プロジェクト用定義
+# プロジェクトID定義
 # pathにプロジェクトを判定するための値が設定されているXPathを指定
 # typeに上記Pathで指定された値に対するプロジェクト識別子(Redmineが保持)を設定
 # defaultには上記の条件にあわなかった場合のデフォルトのプロジェクト識別子を設定
@@ -218,7 +217,6 @@ projects:
 # earthquake_threasholdには震度のしきい値
 # tsunami_pathには津波高さを取得する際のXPath
 # tsunami_threasholdには高さのしきい値
-# intervalにはプロジェクト自動立ち上げを連続で行う際の間隔しきい値を分の単位で設定
 # ------------------------------------------------------------
 autolaunch: 
  earthquake_path: "/Report/Body/Intensity/Observation/Pref/Area/City[Name/text()=\"石巻市\"]/MaxInt/text()"
@@ -231,6 +229,7 @@ autolaunch:
 # 配備番号判断用の設定
 # numberは配備番号
 # pathsは配備番号を判定するためのXPath
+# pathsに設定のあるXPathで値が取得できた場合に該当の配信番号と判定する
 # ------------------------------------------------------------
 disposition: 
  - 
@@ -258,8 +257,9 @@ disposition:
 # ------------------------------------------------------------
 # 配備時の配信用メッセージ
 # parameterはRestI/F用のパラメータ名
-# max_lengthは文字列長
+# max_lengthは最大文字数(バイト長ではない)
 # pathsは文言を取得するためのXPath
+# 複数のXPathで値が取得できた場合は全て連結する
 # ------------------------------------------------------------
 send_message: 
  - 
