--- a/config/ksn_xml_parse_rule.yml
+++ b/config/ksn_xml_parse_rule.yml
@@ -6,7 +6,7 @@ xml_head: "/WarningReport/Summary"
 xml_body: "/WarningReport/Detail/Text"
 
 # ------------------------------------------------------------
-# Issuesテーブルの拡張フィールド用定義(河川XML用)
+# Issuesテーブルの拡張フィールド用定義
 # key:カラム名 value:XML内から要素取得のためのXpath
 # ------------------------------------------------------------
 issue_extras: 
@@ -24,7 +24,7 @@ issue_extras:
 tracker: "6"
 
 # ------------------------------------------------------------
-# プロジェクト用定義
+# プロジェクトID定義
 # ------------------------------------------------------------
 projects: 
  path: "/WarningReport/@cause"
