--- a/config/mrsss_config.yml
+++ b/config/mrsss_config.yml
@@ -16,13 +16,13 @@ channels:
 # BCHのチェックサム値によるチェック要否
 # true チェック要
 # false チェック不要
-need_checksum: true
+need_checksum: false
 
 # アプリケーションの動作モード
 # 0 通常
 # 1 訓練
 # 2 試験
-mode: 1
+mode: 0
 
 # Resqueの使用有無
 # true 使用
